# eif

./: AUTHORS  BUGS  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  mkinstalldirs
contrib/: Makefile.am  Makefile.in  buildcost.pl  cmap.pl  comcount.sh  decay.pl  edu1.sh  edu2.pl  eifrc.include.in  ex.c  genconf.sector  genconf.version  hap1.sh  hap2.pl  lev0.sh  luse.sh  mob.sh  mov.c  pop.sh  with.c
doc/: Ann  CHANGES  EXAMPLE.eifrc  Makefile.am  Makefile.in  SYNTAX  eif.1
src/: Makefile.am  Makefile.in  alias.c  alias.h  cntl.h  compick.c  compick.h  data.h  eif.c  eif.h  empcon.c  empcon.h  games.c  games.h  gencoms.c  gencoms.h  getcom.c  getcom.h  init.c  init.h  main.c  main.h  print.c  print.h  vars.c  vars.h  version.h
src/connect/: Makefile.am  Makefile.in  connect.c  connect.h  expect.c  expect.h  login.c  login.h  proto.h  sock.c  sock.h
